# protobot_balance_controller

./: CMakeLists.txt  LICENSE  README.md  package.xml  protobot_balance_controller.xml
include/protobot_balance_controller/: protobot_balance_controller.hpp
src/: protobot_balance_controller.cpp  protobot_balance_controller_parameters.yaml
test/: test_load_protobot_balance_controller.cpp
test/config/: protobot_balance_controller_params.yaml
